--- a/setup.ipynb
+++ b/setup.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Starting setup...\n",
-      "Running setup for AWS Account: 387311887840\n"
+      "Running setup for AWS Account: ***********\n"
      ]
     }
    ],
@@ -21,8 +21,8 @@
     "\n",
     "# Configuration\n",
     "CONFIG = {\n",
-    "    'lambda_role_arn': 'arn:aws:iam::387311887840:role/financial-analysis-lambda-role',\n",
-    "    'step_functions_role_arn': 'arn:aws:iam::387311887840:role/financial-analysis-step-functions-role',\n",
+    "    'lambda_role_arn': 'arn:aws:iam::**********:role/financial-analysis-lambda-role',\n",
+    "    'step_functions_role_arn': 'arn:aws:iam::**********:role/financial-analysis-step-functions-role',\n",
     "    'region': 'us-east-1'  # change to your region\n",
     "}\n",
     "\n",
